--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "tableexport": "^5.2.0"
   },
   "optionalDependencies": {
     "mini-css-extract-plugin": "^0.5.0"
