--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
