--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bitrix24 reports",
+  "name": "bitrix24-reports",
   "version": "1.0.0",
   "description": "",
   "author": "SainDev",
