--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "start": "webpack",
-    "build": "webpack -p --mode production"
+    "build": "webpack -p --config webpack.prod.js"
   },
   "babel": {
     "presets": [
@@ -32,7 +32,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
