--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
@@ -42,7 +43,10 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
+    "react-bootstrap-table-next": "^3.1.7",
     "react-dom": "^16.8.6",
+    "react-loading-overlay": "^1.0.1",
+    "react-loading-skeleton": "^1.1.2",
     "tableexport": "^5.2.0"
   },
   "optionalDependencies": {
