--- a/package.json
+++ b/package.json
@@ -42,13 +42,16 @@
     "bootswatch": "^4.3.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-bootstrap-table-next": "^3.1.7",
     "react-bootstrap-table2-toolkit": "^2.0.1",
     "react-dom": "^16.8.6",
     "react-loading-overlay": "^1.0.1",
-    "react-loading-skeleton": "^1.1.2"
+    "react-loading-skeleton": "^1.1.2",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
   },
   "optionalDependencies": {
     "mini-css-extract-plugin": "^0.8.0"
