--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "moment-locales-webpack-plugin": "^1.0.7",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
@@ -37,16 +38,18 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.3.1",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
+    "history": "^4.9.0",
     "jquery": "^3.4.1",
+    "material-table": "^1.44.0",
     "moment": "^2.24.0",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
-    "react-bootstrap-table-next": "^3.1.7",
-    "react-bootstrap-table2-toolkit": "^2.0.1",
     "react-dom": "^16.8.6",
     "react-loading-overlay": "^1.0.1",
     "react-loading-skeleton": "^1.1.2",
