--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.6.0",
     "react-loading-overlay": "^1.0.1",
     "react-loading-skeleton": "^1.1.2",
     "react-router": "^5.0.1",
