--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-loading-skeleton": "^1.1.2",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-yandex-metrika": "^2.5.1"
   }
 }
