--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
-    "sw-precache-webpack-plugin": "^0.11.5",
     "terser-webpack-plugin": "^1.4.1",
-    "webpack": "^4.39.2",
+    "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.2",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.3.3",
+    "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -51,7 +51,7 @@
     "jquery": "^3.4.1",
     "material-table": "^1.50.0",
     "moment": "^2.24.0",
-    "query-string": "^6.8.2",
+    "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
