--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -33,21 +33,21 @@
     "precss": "^4.0.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^1.4.1",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-manifest-plugin": "^2.0.4",
+    "terser-webpack-plugin": "^2.1.1",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-manifest-plugin": "^2.1.2",
     "webpack-merge": "^4.2.2",
     "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.4.0",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
-    "history": "^4.9.0",
+    "history": "^4.10.1",
     "jquery": "^3.4.1",
     "material-table": "^1.50.0",
     "moment": "^2.24.0",
@@ -58,8 +58,10 @@
     "react-ga": "^2.6.0",
     "react-loading-overlay": "^1.0.1",
     "react-loading-skeleton": "^1.1.2",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
+    "react-paypal-button-v2": "^2.4.1",
+    "react-router": "^5.1.0",
+    "react-router-dom": "^5.1.0",
+    "react-smart-payment-buttons": "^0.2.3",
     "react-yandex-metrika": "^2.5.1"
   }
 }
