--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bitrix24-reports",
   "version": "1.0.0",
-  "description": "",
+  "description": "Reports on tasks from Bitrix24 API.",
   "author": "SainDev",
-  "homepage": "https://saindev.github.io/",
+  "homepage": "https://reports.saindev.ru/",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
@@ -17,47 +17,47 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "cname-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "file-loader": "^5.0.2",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "moment-locales-webpack-plugin": "^1.1.2",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.3",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.2",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "^5.0.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.0",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "history": "^4.10.1",
     "jquery": "^3.4.1",
-    "material-table": "^1.56.1",
+    "material-table": "^1.57.2",
     "moment": "^2.24.0",
-    "query-string": "^6.10.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "query-string": "^6.11.1",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.13.0",
     "react-ga": "^2.7.0",
     "react-loading-overlay": "^1.0.1",
-    "react-loading-skeleton": "^1.3.0",
+    "react-loading-skeleton": "^2.0.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-yandex-metrika": "^2.6.0"
