--- a/package.json
+++ b/package.json
@@ -17,49 +17,49 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cname-webpack-plugin": "^2.0.1",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "copy-webpack-plugin": "^6.1.1",
+    "css-loader": "^4.3.0",
+    "file-loader": "^6.1.0",
+    "html-webpack-plugin": "^4.5.0",
     "moment-locales-webpack-plugin": "^1.2.0",
-    "node-sass": "^4.13.1",
-    "postcss-loader": "^3.0.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^4.0.2",
     "precss": "^4.0.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "^2.3.5",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^4.2.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge": "^4.2.2",
-    "workbox-webpack-plugin": "^5.0.0"
+    "webpack-merge": "^5.1.4",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.7",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "bootswatch": "^4.4.1",
-    "history": "^4.10.1",
-    "jquery": "^3.4.1",
-    "material-table": "^1.57.2",
-    "moment": "^2.24.0",
-    "query-string": "^6.11.1",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.0",
-    "react-ga": "^2.7.0",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "bootswatch": "^4.5.2",
+    "history": "^5.0.0",
+    "jquery": "^3.5.1",
+    "material-table": "^1.69.0",
+    "moment": "^2.29.0",
+    "query-string": "^6.13.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-loading-overlay": "^1.0.1",
-    "react-loading-skeleton": "^2.0.1",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-loading-skeleton": "^2.1.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-yandex-metrika": "^2.6.0"
   }
 }
